k8s/deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet
  template:
    metadata:
      labels:
        app: dotnet
    spec:
      containers:
        - name: dotnet
          image: vprocopan/dotnet:REPLACE_IMAGE_TAG
          imagePullPolicy: Always
