k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-deployment
  labels:
    app: dotnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet
  template:
    metadata:
      labels:
        app: dotnet
    spec:
      containers:
        - name: dotnet
          image: vprocopan/dotnet:b3723eba9914c5d8d7ab2c23be77956367e4e221
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
