k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet
  namespace: dotnet
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - k8s.procopan.md
  rules:
    - host: k8s.procopan.md
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-service
                port:
                  number: 80
